--- a/src/app/reports/list-companys/list-companys.component.html
+++ b/src/app/reports/list-companys/list-companys.component.html
@@ -1,4 +1,11 @@
-<div style="margin-left: 20px; margin-top: 20px;">
+<div>    
+    <button type="button" class="btn waves-effect waves-light btn-rounded btn-default"  (click)="toPrint()">
+            <i class="mdi mdi-printer"></i>
+            Imprimir
+    </button>
+</div>
+
+<div style="margin-left: 20px; margin-top: 20px;" id="report">
     <h2 style="margin-left: 220px; text-decoration: underline">Listado de Empresas</h2>
 
     <table class="table table-hover">
