--- a/src/app/pages/account-settings/account-settings.component.html
+++ b/src/app/pages/account-settings/account-settings.component.html
@@ -15,13 +15,13 @@
                         <li><a #link5 (click)="cambiarColor('purple', link5)" data-theme="purple" class="selector purple-theme">5</a></li>
                         <li><a #link6 (click)="cambiarColor('megna', link6)" data-theme="megna" class="selector megna-theme">6</a></li>
 
-                        <!-- <li class="d-block m-t-30"><b>Con el sidebar oscuro</b></li>
+                        <li class="d-block m-t-30"><b>Con el sidebar oscuro</b></li>
                         <li><a #link7 (click)="cambiarColor('default-dark', link7)" data-theme="default-dark" class="selector default-dark-theme">7</a></li>
                         <li><a #link8 (click)="cambiarColor('green-dark', link8)" data-theme="green-dark" class="selector green-dark-theme">8</a></li>
                         <li><a #link9 (click)="cambiarColor('red-dark', link9)" data-theme="red-dark" class="selector red-dark-theme">9</a></li>
                         <li><a #link10 (click)="cambiarColor('blue-dark', link10)" data-theme="blue-dark" class="selector blue-dark-theme">10</a></li>
                         <li><a #link11 (click)="cambiarColor('purple-dark', link11)" data-theme="purple-dark" class="selector purple-dark-theme">11</a></li>
-                        <li><a #link12 (click)="cambiarColor('megna-dark', link12)" data-theme="megna-dark" class="selector megna-dark-theme">12</a></li> -->
+                        <li><a #link12 (click)="cambiarColor('megna-dark', link12)" data-theme="megna-dark" class="selector megna-dark-theme">12</a></li>
                     </ul>
                 </div>
 
